--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -2,8 +2,9 @@
     <div class="media-center-plugin layout3">
         <div class="plugin-banner clearfix border-bottom-grey">
             <div class="plugin-slider text-center">
-                <div class="plugin-slide" ng-repeat="item in WidgetHome.items">
-                    <img ng-src="item.data.topImage" err-src="http://www.placehold.it/1280x720.jpg">
+                <div class="plugin-slide" >
+                    <!--data-ng-repeat="image in WidgetHome.media.data.content.images"-->
+                    <img ng-src="{{WidgetHome.media.data.content.images[0].imageUrl | resizeImage:1280:720}}">
                 </div>
             </div>
         </div>
@@ -13,7 +14,7 @@
         <div ng-repeat="item in WidgetHome.items">
             <div class="plugin-banner clearfix border-bottom-grey">
                 <div class="plugin-slide text-center">
-                    <img ng-src="{{item.data.topImage | resizeImage:240:160}}" err-src="http://www.placehold.it/1280x720.jpg">
+                    <img ng-if="item.data.topImage" ng-src="{{item.data.topImage | resizeImage:240:160}}" err-src="http://www.placehold.it/1280x720.jpg">
                 </div>
             </div>
             <div class="padded text-left">
