--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -17,10 +17,10 @@
         </div>
         <div class="padded">
             <div class="link-list">
-                <a class="text-primary">Listen</a>
-                <a class="text-primary">Watch</a>
-                <a class="text-primary">View Source</a>
-                <a class="text-primary">Share</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl">Listen</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl">Watch</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl">View Source</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.links.length">Share</a>
             </div>
             <hr class="small">
             <p ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
