Show carousel image conditionally

--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -2,7 +2,7 @@
     <div class="media-center-plugin layout1">
         <div class="media-center-banner clearfix border-bottom-grey">
             <div class="plugin-slider text-center" data-ng-if="WidgetHome.media.data.content.images.length">
-                <div class="plugin-slide" >
+                <div class="plugin-slide" ng-if="WidgetHome.media.data.content.images[0].imageUrl">
                     <!--data-ng-repeat="image in WidgetHome.media.data.content.images"-->
                     <img ng-src="{{WidgetHome.media.data.content.images[0].imageUrl | resizeImage:1280:720}}">
                 </div>
