--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -4,7 +4,7 @@
             <div class="plugin-slider text-center">
                 <div class="plugin-slide" ng-if="WidgetHome.media.data.content.images[0].imageUrl">
                     <!--data-ng-repeat="image in WidgetHome.media.data.content.images"-->
-                    <img ng-src="{{WidgetHome.media.data.content.images[0].imageUrl | resizeImage:1280:720}}">
+                    <img ng-src="{{WidgetHome.media.data.content.images[0].imageUrl | resizeImage: 342 : 192}}">
                 </div>
             </div>
         </div>
