--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -2,10 +2,16 @@
     <div class="media-center-plugin layout1">
         <div class="media-center-banner clearfix border-bottom-grey">
             <div class="plugin-slider text-center">
-                <div class="plugin-slide" ng-if="WidgetMedia.item.data.topImage">
+                <div class="plugin-slide" >
                     <!--<img src="http://www.placehold.it/1280x720.jpg">-->
-                    <img ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 342 : 200}}">
+                    <img data-ng-hide="WidgetMedia.item.data.videoUrl" ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 342 : 200}}">
+
+                    <div data-ng-show="WidgetMedia.item.data.videoUrl;" id="videoArea" >
+                        <!--ng-show="WidgetMedia.item.data.topImage == ''"-->
+                    </div>
                 </div>
+
+
             </div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix ">
