--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -22,7 +22,7 @@
                             <p class="ellipsis margin-zero"><a class="text-primary">{{item.data.title}}</a></p>
 
                             <p class="summary ellipsis margin-zero">{{item.data.summary}}</p>
-                            <span class="list-item-date">{{item.data.dateCreated  | jsDate | date:"MMMM dd, yyyy"}}</span>
+                            <span class="list-item-date" data-ng-if="item.data.dateCreated">{{item.data.dateCreated  | jsDate | date:"MMMM dd, yyyy"}}</span>
                         </div>
                     </div>
                 </div>
