BF-024: Carousel Implementation

--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -6,7 +6,7 @@
                     <!--<img src="http://www.placehold.it/1280x720.jpg">-->
                     <img data-ng-hide="WidgetMedia.item.data.videoUrl" ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 342 : 200}}">
 
-                    <div data-ng-show="WidgetMedia.item.data.videoUrl;" id="videoArea" >
+                    <div data-ng-show="WidgetMedia.item.data.videoUrl" id="videoArea" >
                         <!--ng-show="WidgetMedia.item.data.topImage == ''"-->
                     </div>
                 </div>
