--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -1,12 +1,13 @@
 <div class="holder padding-zero">
     <div class="media-center-plugin layout3">
         <div class="media-center-banner clearfix border-bottom-grey">
-            <div class="plugin-slider text-center">
+           <!-- <div class="plugin-slider text-center">
                 <div class="plugin-slide" ng-if="WidgetHome.media.data.content.images[0].imageUrl">
-                    <!--data-ng-repeat="image in WidgetHome.media.data.content.images"-->
+                    &lt;!&ndash;data-ng-repeat="image in WidgetHome.media.data.content.images"&ndash;&gt;
                     <img ng-src="{{WidgetHome.media.data.content.images[0].imageUrl | resizeImage: 342 : 192}}">
                 </div>
-            </div>
+            </div>-->
+            <buildfire-carousel images="WidgetHome.media.data.content.images"></buildfire-carousel>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix">
             <p ng-if="WidgetHome.media.data.content.descriptionHTML" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">{{WidgetHome.media.data.content.descriptionHTML}}</p>
@@ -15,7 +16,7 @@
             <div class="list-layout">
                 <div class="list-item" ng-repeat="item in WidgetHome.items">
                     <div class="list-item-media text-left overflow-hidden">
-                        <div class="list-media-holder pull-left play-btn" ng-if="item.data.topImage">
+                        <div class="list-media-holder pull-left" ng-if="item.data.topImage" play-btn="{{item.data.videoUrl.length > 0}}">
                             <img ng-src="{{item.data.topImage | resizeImage:240:160}}">
                         </div>
                         <div class="list-item-copy text-left padding-left-ten padding-right-ten">
