--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -1,12 +1,13 @@
 <div class="holder padding-zero">
     <div class="media-center-plugin list-layout layout4">
         <div class="media-center-banner clearfix border-bottom-grey">
-            <div class="plugin-slider text-center">
+          <!--  <div class="plugin-slider text-center">
                 <div class="plugin-slide" ng-if="WidgetHome.media.data.content.images[0].imageUrl">
-                    <!--data-ng-repeat="image in WidgetHome.media.data.content.images"-->
+                    &lt;!&ndash;data-ng-repeat="image in WidgetHome.media.data.content.images"&ndash;&gt;
                     <img ng-src="{{WidgetHome.media.data.content.images[0].imageUrl | resizeImage: 342 : 192}}">
                 </div>
-            </div>
+            </div>-->
+            <buildfire-carousel images="WidgetHome.media.data.content.images"></buildfire-carousel>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix">
             <p ng-if="WidgetHome.media.data.content.descriptionHTML" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">{{WidgetHome.media.data.content.descriptionHTML}}</p>
@@ -46,7 +47,7 @@
                 <div ng-repeat="item in WidgetHome.items" ng-if="$index % 2 == 0" class="row">
                     <div class="list-item col-xs-6 pull-left">
                         <div class="list-item-media text-center border-radius-three overflow-hidden">
-                            <div class="list-media-holder play-btn">
+                            <div class="list-media-holder"  play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0}}">
                                 <img ng-if="WidgetHome.items[$index].data.topImage" ng-src="{{WidgetHome.items[$index].data.topImage | resizeImage:240:160}}">
                             </div>
                         </div>
@@ -59,7 +60,7 @@
                     </div>
                     <div class="list-item col-xs-6 pull-left" ng-if="WidgetHome.items[$index + 1]">
                         <div class="list-item-media text-center border-radius-three overflow-hidden">
-                            <div class="list-media-holder play-btn">
+                            <div class="list-media-holder" play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0}}">
                                 <img ng-if="WidgetHome.items[$index + 1].data.topImage" ng-src="{{WidgetHome.items[$index + 1].data.topImage | resizeImage:240:160}}">
                             </div>
                         </div>
