--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -77,3 +77,8 @@
     background: rgba(255, 255, 255, 1.0);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
+
+#scroll-infinite{
+    overflow-y: auto;
+    max-height: 580px;
+}
