--- a/widget/templates/home.html
+++ b/widget/templates/home.html
@@ -1,4 +1,4 @@
-<div>
+<div id="home">
   <div ng-if="WidgetHome.media.data.design.listLayout"
       ng-include="'templates/layouts/' + WidgetHome.media.data.design.listLayout+ '.html'">
   </div>
