BF-007: implemented get template

--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -52,9 +52,9 @@
         <span>Bulk Actions</span>
     </div>
     <div class="main col-md-9 pull-right">
-        <a class="btn btn-primary" onclick="window.openDialog('importCSV.html', null, 'sm', null)">Import CSV</a>
-        <a class="btn btn-primary margin-left-ten">Export CSV</a>
-        <a class="btn btn-primary margin-left-ten">Get Template</a>
+        <a class="btn btn-primary" ng-click="ContentHome.openImportCSVDialog()">Import CSV</a>
+        <a class="btn btn-primary margin-left-ten" ng-click="ContentHome.exportCSV()">Export CSV</a>
+        <a class="btn btn-primary margin-left-ten" ng-click="ContentHome.getTemplate()">Get Template</a>
     </div>
 </div>
 <hr class="none">
