--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -1,3 +1,4 @@
+<div class="loader-pan" ng-show="ContentHome.loading"></div>
 <div class="item clearfix row">
     <div class="labels col-md-3 padding-right-zero pull-left">
         <span>Image Carousel</span>
@@ -44,6 +45,14 @@
     <div class="main col-md-12 pull-right">
         <textarea class="form-control" placeholder="WYSIWYG" ui-tinymce="ContentHome.bodyWYSIWYGOptions"
                   ng-model="ContentHome.info.data.content.descriptionHTML"></textarea>
+    </div>
+</div>
+<div class="item clearfix row margin-top-thirty" data-ng-show="ContentHome.csvDataInvalid">
+    <div class="labels col-md-12">
+        <div class="alert alert-warning">
+            <a href="javascript:void(0)" class="close" data-ng-click="ContentHome.csvDataInvalid=false">×</a>
+            <strong>Note!</strong>Uploaded CSV data is incomplete.Title/Summary is required.
+        </div>
     </div>
 </div>
 <hr>
