--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -2,12 +2,12 @@
     <div class="media-center-plugin layout1">
         <div class="media-center-banner clearfix border-bottom-grey">
             <div class="plugin-slider text-center">
-                <div class="plugin-slide" >
-                    <!--<img src="http://www.placehold.it/1280x720.jpg">-->
-                    <img data-ng-hide="WidgetMedia.item.data.videoUrl" ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 342 : 200}}">
+                <div class="plugin-slide">
+                    <img data-ng-hide="WidgetMedia.item.data.videoUrl"
+                         ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 342 : 200}}">
 
-                    <div data-ng-show="WidgetMedia.item.data.videoUrl" id="videoArea" >
-                        <!--ng-show="WidgetMedia.item.data.topImage == ''"-->
+                    <div data-ng-show="WidgetMedia.item.data.videoUrl" id="videoArea" video-js
+                         video-url="{{WidgetMedia.item.data.videoUrl}}">
                     </div>
                 </div>
 
@@ -28,7 +28,6 @@
             </div>
             <hr class="small">
             <p ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
-
 
 
             <div class="dynamic-links">
