--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -5,8 +5,9 @@
             <div class="people-bg padding-top-fifteen padding-bottom-fifteen clearfix">
                 <div class="people-holder clearfix">
                     <div class="people-media text-center" ng-if="WidgetMedia.item.data.topImage">
-                        <!--<img src="http://www.placehold.it/250x400.jpg">-->
                         <img ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">
+                        <div data-ng-show="WidgetMedia.item.data.videoUrl" id="videoArea" video-js video-url="{{WidgetMedia.item.data.videoUrl}}">
+                        </div>
                     </div>
                     <div class="people-info text-center col-md-12">
                         <h5 class="ellipsis margin-top-fifteen">{{WidgetMedia.item.data.title}}</h5>
