BF:010 , BF:012, BF:019

--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -127,7 +127,7 @@
                     <span class="btn-icon btn-link-icon btn-primary transition-third"
                           onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
                     <span class="btn-icon btn-delete-icon btn-danger transition-third"
-                          onclick="window.openDialog('remove.html', null, 'sm', null)"></span>
+                          ng-click="ContentHome.removeListItem($index)"></span>
                         </div>
                     </div>
                 </div>
