--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -5,8 +5,10 @@
             <div class="people-bg padding-top-fifteen padding-bottom-fifteen clearfix">
                 <div class="people-holder clearfix">
                     <div class="people-media text-center" ng-if="WidgetMedia.item.data.topImage">
-                        <img ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">
-                        <div data-ng-show="WidgetMedia.item.data.videoUrl" id="videoArea" video-js video-url="{{WidgetMedia.item.data.videoUrl}}">
+                        <img data-ng-hide="WidgetMedia.item.data.videoUrl" ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">
+                        <div ng-if="WidgetMedia.item.data.videoUrl" id="videoArea" video-js video-url="{{WidgetMedia.item.data.videoUrl}}">
+                        </div>
+                        <div ng-if="!WidgetMedia.item.data.videoUrl" audio-js audio-url="{{WidgetMedia.item.data.audioUrl}}">
                         </div>
                     </div>
                     <div class="people-info text-center col-md-12">
