--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -6,7 +6,15 @@
                 <div class="people-holder clearfix">
                     <div class="people-media text-center" ng-if="WidgetMedia.item.data.topImage">
                         <img data-ng-hide="WidgetMedia.item.data.videoUrl" ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">
-                        <div ng-if="WidgetMedia.item.data.videoUrl" id="videoArea" video-js video-url="{{WidgetMedia.item.data.videoUrl}}">
+                       <!-- <div ng-if="WidgetMedia.item.data.videoUrl" id="videoArea" video-js video-url="{{WidgetMedia.item.data.videoUrl}}">
+                        </div>-->
+                        <div data-ng-show="WidgetMedia.item.data.videoUrl" class="videogular-container">
+                            <videogular vg-theme="WidgetMedia.config.theme.url">
+                                <vg-media vg-src="WidgetMedia.config.sources"
+                                          vg-tracks="WidgetMedia.config.tracks"
+                                          vg-native-controls="true">
+                                </vg-media>
+                            </videogular>
                         </div>
                         <div ng-if="!WidgetMedia.item.data.videoUrl" audio-js audio-url="{{WidgetMedia.item.data.audioUrl}}">
                         </div>
