--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -4,9 +4,9 @@
             <div class="plugin-slider text-center">
                 <div class="plugin-slide">
                     <img data-ng-hide="WidgetMedia.item.data.videoUrl"
-                         ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 342 : 200}}">
+                         ng-src="{{WidgetMedia.item.data.image | resizeImage : 300 : 180}}"/>
 
-                    <div ng-show="WidgetMedia.item.data.videoUrl" class="videogular-container">
+                    <div ng-show="WidgetMedia.item.data.videoUrl && !audio" class="videogular-container">
                         <videogular vg-theme="WidgetMedia.config.theme.url">
                             <vg-media vg-src="WidgetMedia.config.sources"
                                       vg-tracks="WidgetMedia.config.tracks"
@@ -14,12 +14,20 @@
                             </vg-media>
                         </videogular>
                     </div>
-
-                    <div ng-if="!WidgetMedia.item.data.videoUrl" audio-js audio-url="{{WidgetMedia.item.data.audioUrl}}">
+                    <div ng-if="audio" style="background-image: url({{WidgetMedia.item.data.image |resizeImage : 280:170}})">
+                        <h2>
+                            Playing
+                        </h2>
+                        <input id="slider" ng-show="duration" type="range" min="0" max="{{duration}}"
+                               ng-model="currentTime"/>
+                        <a href="javascript:void(0)" ng-click="WidgetMedia.previous()">&lt&lt Previous</a>
+                        <a href="#" ng-click="WidgetMedia.skip(-10)">&lt Back</a>
+                        <a href="#" ng-click="WidgetMedia.pause();">Pause ||</a>
+                        <a href="javascript:void(0)" ng-click="WidgetMedia.playAudio()">Play </a>
+                        <a href="#" ng-click="WidgetMedia.skip(10)">Skip &gt;</a>
+                        <a href="#" ng-click="WidgetMedia.next()">Next &gt;&gt;</a>
                     </div>
                 </div>
-
-
             </div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix ">
@@ -29,11 +37,10 @@
         <div class="padded padding-top-zero">
             <hr class="small">
             <div class="link-list">
-                <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl">Listen</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl" ng-click="WidgetMedia.listen()">Listen</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl">Watch</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl">View Source</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.links.length">Share</a>
-                <a class="text-primary" ng-click="WidgetMedia.changeSource()">Change</a>
 
             </div>
             <hr class="small">
