--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -5,10 +5,10 @@
             <div class="people-bg padding-top-fifteen padding-bottom-fifteen clearfix">
                 <div class="people-holder clearfix">
                     <div class="people-media text-center" ng-if="WidgetMedia.item.data.topImage">
-                        <img data-ng-hide="WidgetMedia.item.data.videoUrl" ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">
-                       <!-- <div ng-if="WidgetMedia.item.data.videoUrl" id="videoArea" video-js video-url="{{WidgetMedia.item.data.videoUrl}}">
-                        </div>-->
-                        <div data-ng-show="WidgetMedia.item.data.videoUrl" class="videogular-container">
+                        <img data-ng-hide="WidgetMedia.item.data.videoUrl && !audio"
+                             ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">
+
+                        <div data-ng-show="WidgetMedia.item.data.videoUrl && !audio" class="videogular-container">
                             <videogular vg-theme="WidgetMedia.config.theme.url">
                                 <vg-media vg-src="WidgetMedia.config.sources"
                                           vg-tracks="WidgetMedia.config.tracks"
@@ -16,7 +16,18 @@
                                 </vg-media>
                             </videogular>
                         </div>
-                        <div ng-if="!WidgetMedia.item.data.videoUrl" audio-js audio-url="{{WidgetMedia.item.data.audioUrl}}">
+                        <div ng-if="audio" style="background-image: url({{WidgetMedia.item.data.image |resizeImage : 250:400}})">
+                            <h2>
+                                Playing
+                            </h2>
+                            <input id="slider" ng-show="duration" type="range" min="0" max="{{duration}}"
+                                   ng-model="currentTime"/>
+                            <a href="javascript:void(0)" ng-click="WidgetMedia.previous()">&lt&lt Previous</a>
+                            <a href="#" ng-click="WidgetMedia.skip(-10)">&lt Back</a>
+                            <a href="#" ng-click="WidgetMedia.pause();">Pause ||</a>
+                            <a href="javascript:void(0)" ng-click="WidgetMedia.playAudio()">Play </a>
+                            <a href="#" ng-click="WidgetMedia.skip(10)">Skip &gt;</a>
+                            <a href="#" ng-click="WidgetMedia.next()">Next &gt;&gt;</a>
                         </div>
                     </div>
                     <div class="people-info text-center col-md-12">
@@ -28,7 +39,7 @@
         </div>
         <div class="padded">
             <div class="link-list">
-                <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl">Listen</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl" ng-click="WidgetMedia.listen()">Listen</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl">Watch</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl">View Source</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.links.length">Share</a>
