--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -5,8 +5,8 @@
             <div class="people-bg padding-top-fifteen padding-bottom-fifteen clearfix">
                 <div class="people-holder clearfix">
                     <div class="people-media text-center" ng-if="WidgetMedia.item.data.topImage">
-                        <img data-ng-hide="WidgetMedia.item.data.videoUrl && !audio"
-                             ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">
+                        <!--<img data-ng-hide="WidgetMedia.item.data.videoUrl && audio"
+                             ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">-->
 
                         <div data-ng-show="WidgetMedia.item.data.videoUrl && !audio" class="videogular-container">
                             <videogular vg-theme="WidgetMedia.config.theme.url">
@@ -19,7 +19,8 @@
                                     <vg-scrub-bar>
                                         <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
                                     </vg-scrub-bar>
-                                    <vg-time-display>{{ timeLeft | date:'mm:ss':'+0530' | timeCorrect }}</vg-time-display>
+                                    <vg-time-display>{{ timeLeft | date:'mm:ss':'+0530' | timeCorrect }}
+                                    </vg-time-display>
 
                                     <vg-volume>
                                         <vg-mute-button></vg-mute-button>
@@ -29,18 +30,18 @@
                                 <vg-overlay-play></vg-overlay-play>
                             </videogular>
                         </div>
-                        <div ng-if="audio" style="background-image: url({{WidgetMedia.item.data.image |resizeImage : 250:400}})">
+                        <div>
                             <h2>
                                 Playing
                             </h2>
                             <input id="slider" ng-show="duration" type="range" min="0" max="{{duration}}"
                                    ng-model="currentTime"/>
                             <a href="javascript:void(0)" ng-click="WidgetMedia.previous()">&lt&lt Previous</a>
-                            <a href="#" ng-click="WidgetMedia.skip(-10)">&lt Back</a>
-                            <a href="#" ng-click="WidgetMedia.pause();">Pause ||</a>
+                            <a href="javascript:void(0)" ng-click="WidgetMedia.skip(-10)">&lt Back</a>
+                            <a href="javascript:void(0)" ng-click="WidgetMedia.pause();">Pause ||</a>
                             <a href="javascript:void(0)" ng-click="WidgetMedia.playAudio()">Play </a>
-                            <a href="#" ng-click="WidgetMedia.skip(10)">Skip &gt;</a>
-                            <a href="#" ng-click="WidgetMedia.next()">Next &gt;&gt;</a>
+                            <a href="javascript:void(0)" ng-click="WidgetMedia.skip(10)">Skip &gt;</a>
+                            <a href="javascript:void(0)" ng-click="WidgetMedia.next()">Next &gt;&gt;</a>
                         </div>
                     </div>
                     <div class="people-info text-center col-md-12">
@@ -52,7 +53,8 @@
         </div>
         <div class="padded">
             <div class="link-list">
-                <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl" ng-click="WidgetMedia.listen()">Listen</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl"
+                   ng-click="WidgetMedia.listen()">Listen</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl">Watch</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl">View Source</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.links.length">Share</a>
